k8s/apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: apps
  labels:
    app.kubernetes.io/name: frontend

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: "frontend"
  selector:
    app.kubernetes.io/name: frontend
